bb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      bb: web
  template:
    metadata:
      labels:
        bb: web
    spec:
      containers:
      - name: aspnet-site
        image: jishoy96/aspent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: bb-entrypoint
  namespace: default
spec:
  type: NodePort
  selector:
    bb: web
  ports:
  - port: 5000
    targetPort: 5000
    #nodePort: 30001
