ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: asp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bb-entrypoint
                port:
                  number: 5000
